<resources>
    <string name="app_name">Weather</string>
    <string name="current_weather">Current weather</string>
    <string name="feels_like">Feels Like</string>
    <string name="humidity">Humidity</string>
    <string name="wind">Wind</string>
    <string name="speed">Speed</string>
    <string name="direction">Direction</string>
    <string name="sunrise_and_sunset">Sunrise and sunset</string>
    <string name="add_new_location">Add new location</string>
</resources>